--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@tanstack/react-query": "^5.75.4",
+    "@tanstack/react-query-devtools": "^5.75.4",
     "next": "15.3.1",
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
